<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linear_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/textTitle"
            android:text="Distrito: " />

        <Spinner
            android:id="@+id/distrito"
            android:layout_width="wrap_content"
            android:layout_height="48dp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ima"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_inaguracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inaguracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ina"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_patrimonio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/patrimonio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pat" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_metro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/metro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/met" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dir" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center"
            style="@style/textTitle"
            android:text="Coordenadas: " />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_coordenadas_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/coordenadas_lat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lat"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_coordenadas_lon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/coordenadas_lon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lon"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        style="@style/textTitle"
        android:text="@string/descripcion" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/des"
            android:justificationMode="inter_word"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_white_black"
        android:text="AGREGAR" />
</LinearLayout>