<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        style="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.MadridIndustria.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tu_contra"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/saludo"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@+id/contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/olvidado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/inicio"
        style="@style/buttonoutlined"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/roboto"
        android:text="@string/iniciarSesion"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/olvidado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/olvidado"
        style="@style/buttonoutline"
        android:text="@string/olvidaste"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>