<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Patrimonio">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbarCollapse"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/imagen"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/contenido"
                    android:scaleType="centerCrop" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/boton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="16dp"
                    android:src="@drawable/heart"
                    app:backgroundTint="@color/white"
                    app:layout_anchor="@id/appBarLayout"
                    app:shapeAppearanceOverlay="@style/redondo" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/inaguracion" />

                    <TextView
                        android:id="@+id/inaguracion"
                        style="@style/textContent"
                        android:text="1980" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/metro" />

                    <TextView
                        android:id="@+id/metro"
                        style="@style/textContent"
                        android:text="Atocha" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/direccion" />
                </LinearLayout>

                <TextView
                    android:id="@+id/direccion"
                    style="@style/textContent"
                    android:onClick="abrirUbicacion"
                    android:text="Calle de Murcia, 32, 28007, Madrid" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <TextView
                    style="@style/textTitle"
                    android:text="@string/descripcion" />

                <TextView
                    android:id="@+id/descripcion"
                    style="@style/textContent"
                    android:justificationMode="inter_word"
                    android:text="La estación de Atocha en Madrid es un fascinante patrimonio industrial del siglo XIX, con su impresionante estructura de hierro y cristal. Más que una simple terminal ferroviaria, Atocha fusiona la elegancia histórica con la modernidad.\n\nSu nave central acristalada y la antigua sala de espera, con detalles como azulejos tallados, te transportan a otra época. Además, el Jardín Tropical dentro de la estación agrega un toque de serenidad y naturaleza.\n\nAtocha es un testimonio viviente de la Revolución Industrial y un lugar donde el pasado y el presente convergen de manera única.La estación de Atocha en Madrid es un fascinante patrimonio industrial del siglo XIX, con su impresionante estructura de hierro y cristal. Más que una simple terminal ferroviaria, Atocha fusiona la elegancia histórica con la modernidad.\n\nSu nave central acristalada y la antigua sala de espera, con detalles como azulejos tallados, te transportan a otra época. Además, el Jardín Tropical dentro de la estación agrega un toque de serenidad y naturaleza.\n\nAtocha es un testimonio viviente de la Revolución Industrial y un lugar donde el pasado y el presente convergen de manera única." />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
